Fix footer sizing and sponsor alignment

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -130,25 +130,21 @@ body {
       display: inline-block;
       height: 200px;
       width: 200px;
-      vertical-align: middle;
     }
     #home-gold-sponsors > div {
       display: inline-block;
       height: 150px;
       width: 150px;
-      vertical-align: middle;
     }
     #home-silver-sponsors > div {
       display: inline-block;
       height: 100px;
       width: 100px;
-      vertical-align: middle;
     }
     #home-bronze-sponsors > div {
       display: inline-block;
       height: 50px;
       width: 50px;
-      vertical-align: middle;
       p {
         font-size: small;
       }
@@ -186,6 +182,14 @@ body {
         width: 2em;
         padding: 0;
       }
+    }
+
+    #footer-copyright {
+      margin-left: -1em;
+      margin-right: -0.9em;
+      padding-top: 1em;
+      padding-bottom: 0.01em;
+      background-color: #00750b;
     }
   }
 
